# R1L-Powermode

./: CMakeLists.txt  README.md  java-formatter.sh
VehiclePowerDaemon/integration_test/: CMakeLists.txt  ColdbootTest.cpp  Queue.h  RequestToEndEarlyHmi.cpp  RestartVpsTest.cpp  ResumeTest.cpp  SuspendCancelTest.cpp  SuspendTest.cpp  VpdIntegrationTest.h  main.cpp
VehiclePowerDaemon/integration_test/mocks/: MockAndroidInit.h  MockConfigReader.h  MockKernelModlesControl.h  MockLogDaemonActions.h  MockMessageServer.h  MockVpdBridgeAdapter.h  MockWakeLockManager.h
VehiclePowerDaemon/src/: CMakeLists.txt  VehiclePowerDaemon.cpp  VehiclePowerDaemon.h  VehiclePowerDaemonLog.cpp  VehiclePowerDaemonLog.h  main.cpp
VehiclePowerDaemon/src/ClientsInteraction/: ClientActions.cpp  ClientActions.h  ClientInteraction.cpp  ClientInteraction.h  IClientActions.h  IStateSender.h  StateSender.cpp  StateSender.h
VehiclePowerDaemon/src/EventHandling/: BootDaemonEventHandler.cpp  BootDaemonEventHandler.h  BootDaemonSubscriptionHandler.cpp  BootDaemonSubscriptionHandler.h  BootDaemonUnsubscriptionHandler.cpp  BootDaemonUnsubscriptionHandler.h  CpuStartHandler.cpp  CpuStartHandler.h  DisconnectHandler.cpp  DisconnectHandler.h  EventHandling.cpp  EventHandling.h  EventQueueHandler.cpp  EventQueueHandler.h  HmiEventsHandler.cpp  HmiEventsHandler.h  IEventHandler.h  LogdogStopCompleteHandler.cpp  LogdogStopCompleteHandler.h  LogdogSubscriptionHandler.cpp  LogdogSubscriptionHandler.h  LogdogUnsubscriptionHandler.cpp  LogdogUnsubscriptionHandler.h  NativeStopCompleteHandler.cpp  NativeStopCompleteHandler.h  ResumeProcessingStartCompleteSentHandler.cpp  ResumeProcessingStartCompleteSentHandler.h  ShutdownProcessingStartSentHandler.cpp  ShutdownProcessingStartSentHandler.h  SubscriptionHandler.cpp  SubscriptionHandler.h  TimeoutHandler.cpp  TimeoutHandler.h  UnsubscriptionHandler.cpp  UnsubscriptionHandler.h  VcpuPowerStateChangeHandler.cpp  VcpuPowerStateChangeHandler.h  VpsAppRestartCompleteHandler.cpp  VpsAppRestartCompleteHandler.h  VpsAppResumeCompleteHandler.cpp  (+17 more)
VehiclePowerDaemon/src/EventQueue/: EventQueue.cpp  EventQueue.h  IEventReceiver.h  IEventSource.h
VehiclePowerDaemon/src/EventTransport/: IMessageServer.h  IVpdNotificationSender.h  MessageServerWraper.cpp  MessageServerWraper.h  VpdMessageServer.cpp  VpdMessageServer.h
VehiclePowerDaemon/src/LogDaemonActions/: ILogDaemonActions.h  LogDaemonActions.cpp  LogDaemonActions.h
VehiclePowerDaemon/src/ModulesControl/: IKernelModulesControl.h  KernelModulesControl.cpp  KernelModulesControl.h
VehiclePowerDaemon/src/NativeRunner/: AndroidInit.cpp  AndroidInit.h  ConfigScriptCmdCreator.cpp  ConfigScriptCmdCreator.h  IAndroidInit.h  ICommandResult.h  ICondition.h  IConfigScriptCmdCreator.h  IConfigScriptCommand.h  INativeConfigProvider.h  INativeRunner.h  INativeRunnerHolder.h  NativeConfigProvider.cpp  NativeConfigProvider.h  NativeRunnerHolder.cpp  NativeRunnerHolder.h  NativeRunnerManager.cpp  NativeRunnerManager.h  NativeRunnerManagerSequential.cpp  NativeRunnerManagerSequential.h  ParamByteEqualCondition.cpp  ParamByteEqualCondition.h  ParamStringEqualCondition.cpp  ParamStringEqualCondition.h  StartNativeCmdConditional.cpp  StartNativeCmdConditional.h  StartNativeCmdConditionalResult.cpp  StartNativeCmdConditionalResult.h  StartNativeCommand.cpp  StartNativeCommand.h  StartNativeCommandResult.cpp  StartNativeCommandResult.h
VehiclePowerDaemon/src/ShutdownManager/: IAndroidPowerManager.h  IPowerStateChangeListener.h  IPowerStateHolder.h  IShutdownAction.h  IVpdRestartHolder.h  IWakeLockManager.h  IWakeUpManager.h  PowerState.h  PowerStateHolder.cpp  PowerStateHolder.h  ShutdownManager.cpp  ShutdownManager.h  SystemPowerStateListener.cpp  SystemPowerStateListener.h  VpdRestartHolder.cpp  VpdRestartHolder.h  VpmBridgeDaemonAdapter.cpp  VpmBridgeDaemonAdapter.h  WakeLockManager.cpp  WakeLockManager.h  WakeUpManager.cpp  WakeUpManager.h
VehiclePowerDaemon/src/StateHolder/: IStateHolder.h  StateHolder.cpp  StateHolder.h  SubscriptionNotificationDecorator.cpp  SubscriptionNotificationDecorator.h
VehiclePowerDaemon/src/StateMachine/: IAppRestartCompleteNotification.h  IAppResumeCompleteNotification.h  IDisconnectNotification.h  IFwRestartCompleteNotification.h  (+21 more)
VehiclePowerDaemon/test/: CMakeLists.txt  log.h  main.cpp
libvehiclepwr/src/: CMakeLists.txt
libvehiclepwr/test/: CMakeLists.txt  MockIClient.h  MockINativeCallback.h  VpdEvents.h  VpdNotifications.h
(+624 files in other folders)
